--- a/src/template.ejs
+++ b/src/template.ejs
@@ -50,6 +50,8 @@
     <meta name="twitter:site" content="@bRuttaZz">
     <meta name="twitter:creator" content="@bRuttaZz">
     <meta name="twitter:image" content="https://brutt.site/assets/images/avatar.jpg">
+    <meta name="google-site-verification" content="yy0W_kqfIlLBRYX7Eeqw8CKlFTdJ6Gp-ZlJSmWBMW04" />
+    <meta name="google-site-verification" content="OJKRiwUcAniBZKSSyY64QsZPA6mXm99Rx3vc_PrN4gs" />
 </head>
 
 <body>
@@ -62,7 +64,7 @@
         <div class="container">
 
             <div class="profile-img">
-                <img src="./assets/images/avatar.jpg" class="realtar">
+                <img src="./assets/images/me.jpg" class="realtar">
             </div>
 
             <div class="bio">
@@ -94,7 +96,7 @@
     <script>
         const avatar = document.createElement("img")
         avatar.classList.add("avatar")
-        avatar.src = "./assets/images/me.jpg"
+        avatar.src = "./assets/images/avatar.jpg"
 
         const profileImageContainer = document.querySelector(".profile-img")
         const realtar = document.querySelector(".realtar")
