--- a/assets/style.css
+++ b/assets/style.css
@@ -4,13 +4,31 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-a {
-    text-decoration: none;
-    color: #cef083;
+:root {
+     /* default to light mode  */
+    --background-color: #fafafa;
+    --profile-cover-bg: antiquewhite;
+    --profile-cover-text-color: #0e0d0d;
+    --profile-cover-secondary-text-color: rgb(124, 124, 123);
+    --profile-cover-bio-text-color: rgb(73, 73, 73);
+    --profile-cover-bio-badge-bg-color: rgb(158, 191, 253);
+    --profile-cover-bio-badge-text-color: rgb(88, 88, 88);
+    --profile-cover-about-bg: rgba(131, 238, 117, 0.658);
+    --profile-cover-about-text: rgb(75, 75, 75);
+    --profile-cover-about-text-secondary: rgb(109, 109, 109);
+    --project-section-bg: rgba(191, 206, 87, 0.4);
+    --project-section-text: gray;
+    --project-card-bg: antiquewhite;
+    --project-card-text: rgb(80, 80, 80);
+    --project-card-badge-bg: rgba(158, 191, 253);
+    --anchor-txt-color: #177d97;
+
+    background-color: var(--background-color);
 }
 
-:root {
-    background-color: #0d1117;
+.dark {
+    /* and the dark mode  */
+    --background-color: #0d1117;
     --profile-cover-bg: #1e2227;
     --profile-cover-text-color: #fafafa;
     --profile-cover-secondary-text-color: rgb(124, 124, 123);
@@ -25,32 +43,13 @@ a {
     --project-card-bg: #c1bfbf66;
     --project-card-text: rgb(34, 34, 34);
     --project-card-badge-bg: rgb(145, 152, 166);
+    --anchor-txt-color: #cef083;
 }
 
-@media (prefers-color-scheme: light) {
-    :root {
-        background-color: #fafafa;
-        --profile-cover-bg: antiquewhite;
-        --profile-cover-text-color: #0e0d0d;
-        --profile-cover-secondary-text-color: rgb(124, 124, 123);
-        --profile-cover-bio-text-color: rgb(73, 73, 73);
-        --profile-cover-bio-badge-bg-color: rgb(158, 191, 253);
-        --profile-cover-bio-badge-text-color: rgb(88, 88, 88);
-        --profile-cover-about-bg: rgba(131, 238, 117, 0.658);
-        --profile-cover-about-text: rgb(75, 75, 75);
-        --profile-cover-about-text-secondary: rgb(109, 109, 109);
-        --project-section-bg: rgba(191, 206, 87, 0.4);
-        --project-section-text: gray;
-        --project-card-bg: antiquewhite;
-        --project-card-text: rgb(80, 80, 80);
-        --project-card-badge-bg: rgba(158, 191, 253);
-    }
-
-    a {
-        color: #177d97;
-    }
+a {
+    text-decoration: none;
+    color: var(--anchor-txt-color);
 }
-
 
 .profile-cover {
     background-color: var(--profile-cover-bg);
@@ -108,8 +107,8 @@ a {
 
 .profile-cover .container .profile-img img {
     border-radius: 30px;
-    max-width: 180px;
-    min-width: 180px;
+    width: 180px;
+    height: 180px;
     margin-right: 20px;
 }
 
@@ -226,22 +225,27 @@ a {
     left: auto;
     right: 35px;
     padding: 5px;
-}
-
-.switch-box img {
-    width: 100%;
-    object-fit: cover;
-}
-
-@media (prefers-color-scheme: light) {
-    .switch-box img {
-        content: url("./images/craps/dark.png");
-    }
-}
-
-
-@media (prefers-color-scheme: dark) {
-    .switch-box img {
-        content: url("./images/craps/light.png");
-    }
 } */
+
+.theme-swticher {
+    border-radius: 5px;
+    background-color: var(--profile-cover-about-bg);
+    vertical-align: center;
+    text-align: center;
+    width: 23px;
+    height: 23px;
+    font-size: larger;
+    position: absolute;
+    top: 35px;
+    left: auto;
+    right: 35px;
+    padding: 8px;
+}
+
+.social-media-icons {
+    font-size: larger;
+}
+
+.social-media-icons a {
+    color: var(--profile-cover-secondary-text-color);
+}
