making room for blogs

--- a/_src/templates/about.ejs
+++ b/_src/templates/about.ejs
@@ -1,4 +1,22 @@
-<%- include('partials/header.ejs', {name: "about" }); %>
+<%- include('partials/header.ejs', {
+    name: "about",
+    title: "Agraj P Das (bRuttaZz)",
+    description: "Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!", 
+    ldJson: `{
+        "@context": "https://schema.org",
+        "@id": "https://brutt.site",
+        "@type": "WebPage",
+        "name": "Agraj P Das (bRuttaZz)",
+        "url": "https://brutt.site",
+        "description": "Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!",
+        "logo": "https://brutt.site/assets/images/avatar.jpg",
+        "sameAs": [
+            "https://twitter.com/bruttazz_",
+            "https://github.com/bruttazz",
+            "https://instagram.com/bruttazz",
+            "https://fosstodon.org/@bRUttaZz"
+        ]
+    }` }); %>
 
     <!-- about tab  -->
 
