upto recent update

--- a/_source/build-src/templates/about.ejs
+++ b/_source/build-src/templates/about.ejs
@@ -52,6 +52,19 @@
                 <!-- project cards comes here  -->
         </div>
     </div>
+
+    <!-- the blogs section  -->
+    <div class="project-sec">
+        <b class="project-sec-heading">
+            <span class="mdi mdi-pin"></span>
+            some "decent" blogs
+        </b>
+        <div class="blog-cards">
+            <%- blogCards %>
+                <!-- blog cards comes here  -->
+        </div>
+    </div>
+    
     <center>
         <a rel="me" href="https://fosstodon.org/@bRuttaZz" style="color: blue;">-</a>
     </center>
