--- a/_source/build-src/templates/blogs.ejs
+++ b/_source/build-src/templates/blogs.ejs
@@ -12,8 +12,10 @@
         "logo": "https://brutt.site/assets/images/avatar.jpg",
     }` }); %>
 
-    <!-- projects tab  -->
-    TODO
-
+    <!-- blogs tab  -->
+    <h3 class="ps-1 blogs-heading">Some of my "fair enough" writings..</h3>
+    <div class="blogs-only-sec">
+        <%- blogs %>
+    </div>
 
 <%- include('partials/footer'); %>
