--- a/assets/style.css
+++ b/assets/style.css
@@ -240,6 +240,53 @@ a {
     border-radius: 8px;
 }
 
+.blog-cards {
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    text-align: left;
+    max-height: 80vh;
+}
+
+.blogs-heading {
+    color: var(--profile-cover-secondary-text-color);
+}
+
+.blog-card {
+    background-color: var(--project-card-bg);
+    border-radius: 5px;
+    padding: 8px;
+    padding-bottom: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
+    font-family: 'RedHatMonoRegular' monospace;
+    font-size: smaller;
+}
+
+.blog-card a {
+    text-decoration: none;
+    color: var(--project-card-text);
+}
+
+.blog-card .title {
+    font-size: 1.1rem;
+    color: var(--profile-cover-text-color);
+}
+
+.blog-card .content {
+    color: var(--profile-cover-secondary-text-color);
+    font-size: 1rem;
+}
+
+.blog-card .badge {
+    background-color: var(--project-card-badge-bg);
+    padding: 2px;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 8px;
+}
+
 .ps-1 {
     padding-left: 5px;
 }
