now got a nav bar and supports blogs and projects

--- a/_source/build-src/templates/about.ejs
+++ b/_source/build-src/templates/about.ejs
@@ -16,7 +16,9 @@
             "https://instagram.com/bruttazz",
             "https://fosstodon.org/@bRUttaZz"
         ]
-    }` }); %>
+    }`,
+    keywords: "agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site, aboutme, about, self, info, person"
+    }); %>
 
     <!-- about tab  -->
 
