--- a/_source/build-src/templates/blogs.ejs
+++ b/_source/build-src/templates/blogs.ejs
@@ -10,12 +10,16 @@
         "url": "https://brutt.site/blogs",
         "description": "Blogs of bRuttaZz (Agraj P Das)! List of some of my blog posts..",
         "logo": "https://brutt.site/assets/images/avatar.jpg",
-    }` }); %>
+    }`,
+    keywords: "blogs, allblogs, writings, docs, agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site",
+    }); %>
 
     <!-- blogs tab  -->
     <h3 class="ps-1 blogs-heading">Some of my "fair enough" writings..</h3>
     <div class="blogs-only-sec">
         <%- blogs %>
     </div>
+
+    <!-- TODO : add pagination to the blogs page  -->
 
 <%- include('partials/footer'); %>
