--- a/_source/build-src/templates/projects.ejs
+++ b/_source/build-src/templates/projects.ejs
@@ -1,9 +1,17 @@
-<%- include('partials/header.ejs', { name: "projects" , title: "Projects | bRuttaZz" ,
-    description: "Projects of bRuttaZz (Agraj P Das) | List of some of my 'just for fun' projects.." , ldJson:
-    `{ "@context" : "https://schema.org" , "@id" : "https://brutt.site" , "@type" : "WebPage" , "name"
-    : "Projects | bRuttaZz" , "url" : "https://brutt.site/projects" , "description"
-    : "Projects of bRuttaZz (Agraj P Das)! List of some of my 'just for fun' projects.." , "logo"
-    : "https://brutt.site/assets/images/avatar.jpg" , }` }); 
+<%- include('partials/header.ejs', { 
+    name: "projects" , 
+    title: "Projects | bRuttaZz" ,
+    description: "Projects of bRuttaZz (Agraj P Das) | List of some of my 'just for fun' projects.." , 
+    ldJson: `{ 
+        "@context" : "https://schema.org" , 
+        "@id" : "https://brutt.site" , 
+        "@type" : "WebPage" , 
+        "name": "Projects | bRuttaZz" , 
+        "url" : "https://brutt.site/projects" , 
+        "description": "Projects of bRuttaZz (Agraj P Das)! List of some of my 'just for fun' projects.." , 
+        "logo": "https://brutt.site/assets/images/avatar.jpg" , }`,
+    keywords: "projects, allprojects, works, docs, agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site",
+}); 
 %>
 
     <!-- projects tab  -->
