--- a/assets/style.css
+++ b/assets/style.css
@@ -132,6 +132,7 @@ a {
     width: 180px;
     height: 180px;
     margin-right: 20px;
+    cursor: pointer;
 }
 
 .profile-about {
@@ -259,7 +260,6 @@ a {
     padding: 8px;
     padding-bottom: 10px;
     margin-top: 10px;
-    margin-right: 10px;
     font-family: 'RedHatMonoRegular' monospace;
     font-size: smaller;
 }
@@ -280,6 +280,14 @@ a {
 }
 
 .blog-card .badge {
+    background-color: var(--project-card-badge-bg);
+    padding: 2px;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 8px;
+}
+
+.blog-date-badge {
     background-color: var(--project-card-badge-bg);
     padding: 2px;
     padding-left: 8px;
@@ -330,6 +338,7 @@ a {
 .nav-bar {
     padding-top: 10px;
     padding-bottom: 10px;
+    height: 39px;
 }
 
 .nav-item {
@@ -374,4 +383,9 @@ a {
 
 .social-media-icons a {
     color: var(--profile-cover-secondary-text-color);
+}
+
+.blog-content {
+    font-family: 'RedHatMonoRegular' monospace;
+    font-size: medium;
 }
