--- a/_source/build-src/templates/blog.ejs
+++ b/_source/build-src/templates/blog.ejs
@@ -24,6 +24,11 @@
         <%- content %>    
     </div>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">
-
+    <style>
+        .hljs {
+            background: var(--hlgs-bg);
+            color: var(--hlgs-text);
+        }
+    </style>
 
 <%- include('partials/footer'); %>
