--- a/_source/build-src/templates/partials/footer.ejs
+++ b/_source/build-src/templates/partials/footer.ejs
@@ -3,6 +3,6 @@
         </div>
     </body>
     <footer>
-    
+        <center class="copyright">© 2024 Agraj P Das</center>
     </footer>
 </html>
