--- a/src/build-src/templates/about.ejs
+++ b/src/build-src/templates/about.ejs
@@ -17,7 +17,8 @@
             "https://fosstodon.org/@bRUttaZz"
         ]
     }`,
-    keywords: "agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site, aboutme, about, self, info, person"
+    keywords: "agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site, aboutme, about, self, info, person",
+    shareImage: "https://brutt.site/assets/images/avatar.jpg",
     }); %>
 
     <!-- about tab  -->
