--- a/src/build-src/templates/blog.ejs
+++ b/src/build-src/templates/blog.ejs
@@ -12,7 +12,8 @@
         "description": description,
         "logo": "https://brutt.site/assets/images/avatar.jpg",
     }`,
-    keywords: keywords
+    keywords: keywords,
+    shareImage: shareImage || "https://brutt.site/assets/images/avatar.jpg",
     }); %>
 
     <!-- blog portion  -->
