--- a/src/build-src/templates/blogs.ejs
+++ b/src/build-src/templates/blogs.ejs
@@ -12,6 +12,7 @@
         "logo": "https://brutt.site/assets/images/avatar.jpg",
     }`,
     keywords: "blogs, allblogs, writings, docs, agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site",
+    shareImage: "https://brutt.site/assets/images/avatar.jpg",
     }); %>
 
     <!-- blogs tab  -->
