--- a/src/build-src/templates/partials/header.ejs
+++ b/src/build-src/templates/partials/header.ejs
@@ -29,13 +29,13 @@
     <meta property="og:description" content="<%= description %>">
     <meta property="og:url" content="https://brutt.site">
     <meta property="og:site_name" content="<%= title %>">
-    <meta property="og:image" content="https://brutt.site/assets/images/avatar.jpg">
+    <meta property="og:image" content="<%= shareImage %>">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="<%= title %>">
     <meta name="twitter:description" content="<%= description %>">
     <meta name="twitter:site" content="@bRuttaZz">
     <meta name="twitter:creator" content="@bRuttaZz">
-    <meta name="twitter:image" content="https://brutt.site/assets/images/avatar.jpg">
+    <meta name="twitter:image" content="<%= shareImage %>">
     <meta name="google-site-verification" content="yy0W_kqfIlLBRYX7Eeqw8CKlFTdJ6Gp-ZlJSmWBMW04" />
     <meta name="google-site-verification" content="OJKRiwUcAniBZKSSyY64QsZPA6mXm99Rx3vc_PrN4gs" />
 
