--- a/src/build-src/templates/projects.ejs
+++ b/src/build-src/templates/projects.ejs
@@ -11,6 +11,7 @@
         "description": "Projects of bRuttaZz (Agraj P Das)! List of some of my 'just for fun' projects.." , 
         "logo": "https://brutt.site/assets/images/avatar.jpg" , }`,
     keywords: "projects, allprojects, works, docs, agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site",
+    shareImage: "https://brutt.site/assets/images/avatar.jpg",
 }); 
 %>
 
