--- a/src/build-src/templates/about.ejs
+++ b/src/build-src/templates/about.ejs
@@ -47,8 +47,9 @@
     <!-- the projects section  -->
     <div class="project-sec">
         <b class="project-sec-heading">
-            <span class="mdi mdi-pin"></span>
-            some "good looking" projects
+            <!-- <span class="mdi mdi-pin"></span> -->
+            <span class="mdi mdi-chevron-double-right"></span>
+            <span>some "good looking" projects</span> 
         </b>
         <div class="project-cards">
             <%- projectCards %>
@@ -59,8 +60,9 @@
     <!-- the blogs section  -->
     <div class="project-sec">
         <b class="project-sec-heading">
-            <span class="mdi mdi-pin"></span>
-            some "decent" blogs
+            <!-- <span class="mdi mdi-pin"></span> -->
+            <span class="mdi mdi-chevron-double-down"></span>
+            <span> some "decent" blogs </span>
         </b>
         <div class="blog-cards">
             <%- blogCards %>
