--- a/src/build-src/templates/partials/blog-card.ejs
+++ b/src/build-src/templates/partials/blog-card.ejs
@@ -5,7 +5,7 @@
             <p>
                 <%= longDescription %>
                 <div>
-                    <span class="badge">Last Modified: <%= mdate %></span>
+                    <span class="badge">Last Edited: <%= mdate %></span>
                 </div>
             </p>
         </div>
