--- a/src/build-src/templates/partials/header.ejs
+++ b/src/build-src/templates/partials/header.ejs
@@ -19,7 +19,7 @@
     </script>
 
     <link rel="stylesheet" href="<%= baseUrl %>./assets/style.css">
-    <link rel="shortcut icon" href="<%= baseUrl %>./assets/images/avatar.jpg" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="<%= baseUrl %>./assets/images/avatar.jpg" type="image/x-icon"> -->
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet"
         crossorigin="anonymous">
     <script src="<%= baseUrl %>./assets/js/index.js" type="module"></script>
