--- a/src/build-src/templates/projects.ejs
+++ b/src/build-src/templates/projects.ejs
@@ -16,7 +16,7 @@
 %>
 
     <!-- projects tab  -->
-    <h3 class="ps-1">Some of my "fair enough" projects..</h3>
+    <h4 class="ps-1 blogs-heading">Some of my "fair enough" projects..</h4>
     <div class="project-only-sec">
         <%- projects %>
     </div>
