--- a/src/build-src/templates/partials/project-card.ejs
+++ b/src/build-src/templates/partials/project-card.ejs
@@ -2,13 +2,13 @@
     <div class="vertical-align-center">
         <center>
             <a href="<%= projectUrl %>">
-                <img width="130px" src="<%= imageSrc %>">
+                <img width="100px" src="<%= imageSrc %>">
             </a>
             <br><b><%= projectName %></b>
         </center>
     </div>
     <div class="vertical-align-center">
-        <p><%= shortInfo %></p>
+        <p class="shortInfo"><%= shortInfo %></p>
         <p>
             <a href="<%= source %>">
                 <span class="source-link">source</span>
